--- a/package.json
+++ b/package.json
@@ -16,16 +16,20 @@
     "mithril": "^1.1.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.1",
-    "@babel/plugin-transform-react-jsx": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
+    "@babel/plugin-transform-react-jsx": "^7.3.0",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/types": "^7.10.5",
     "@types/mithril": "^1.1.12",
+    "@types/webpack": "^4.41.21",
     "awesome-typescript-loader": "^5.2.1",
-    "babel-loader": "^8.0.2",
-    "browser-sync": "^2.24.7",
+    "babel-loader": "^8.0.6",
+    "browser-sync": "^2.26.12",
     "mithril-tsx-component": "^3.0.0",
-    "typescript": "^3.2.2",
-    "webpack": "^4.18.1",
-    "webpack-cli": "^3.1.0"
+    "typescript": "^3.9.7",
+    "webpack": "^4.39.0",
+    "webpack-cli": "^3.3.6"
   }
 }
